# winner

./: .gitignore  HARDWARE.md  LICENSE.md  README.md  SUBMISSION_README.md  VERIFICATION_CHECKLIST.md  WILLIAMS_TECHNICAL_SUPERIORITY.md  download_archive_node.py  verify_results.py
results/: suprabtm_500_blocks.txt  williams_500_blocks.txt
results_100k/: williams_100k_blocks.txt
williams_revm_final/: Cargo.toml  README.md  williams_execution_time.txt
williams_revm_final/src/: main.rs
